--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 </head>
 <body id="cenário"> 
     <h1> SNAKE GAME </h1>
+    <h2> Para passar de fase, consiga 15 pontos. Você tem 3 vidas para conseguir isso. Boa sorte!</h2>
     <canvas id="snake" width="512" height="512"></canvas>
     
     <div id="game-over" style="display: none; text-align: center; margin-top: 20px;">
-        <button onclick="reiniciarJogo()">Reiniciar</button>
+        <button class="botao" onclick="reiniciarJogo()">Reiniciar Jogo</button>
     </div>
 </body>
 </html>
